tests/ok/meta-function-token-capture.ari
meta fn capture_expr(input: token_stream) -> token_stream {
  return if input.matches("wrap", "(", "$value", ")") {
    input.capture("value", "wrap", "(", "$value", ")")
  } else {
    tokens!(0)
  };
}

meta fn capture_case(input: token_stream) -> token_stream {
  return if tokens_match(input, "case", "$value") {
    tokens_capture(input, "value", "case", "$value")
  } else {
    tokens!(_)
  };
}

fn score(value: i64) -> i64 {
  return match value {
    capture_case!(case 7) => {
      5
    }
    capture_case!(other) => {
      2
    }
  };
}

fn main() -> i64 {
  return capture_expr!(wrap(31)) + capture_expr!(none) + score(7) + score(9);
}
